=== master

* Use savepoints around index creation if creating table inside transaction if ignore_index_errors is used (jeremyevans)

* Deprecate treating :natrual_inner join type on MySQL as NATURAL LEFT JOIN (jeremyevans)

* Deprecate Dataset#mssql_unicode_strings= on Microsoft SQL Server (jeremyevans)

* Preserve encoding when parsing PostgreSQL arrays (jeltz) (#1387)

* Deprecate external modification of Sequel::JDBC::TypeConvertor (jeremyevans)

* Deprecate Sequel::DB2.use_clob_as_blob accessor (jeremyevans)

* Add Database#use_clob_as_blob accessor on DB2 (jeremyevans)

* Deprecate SEQUEL_POSTGRES_USES_PG constant (jeremyevans)

* Do not swallow original exception if exception is raised inside Database#copy_table on PostgreSQL (jeremyevans)

* Deprecate Sequel::Postgres.client_min_messages and force_standard_strings accessors (jeremyevans)

* Deprecate Sequel::Postgres.use_iso_date_format accessor (jeremyevans)

* Do not allow connection in postgres adapter if postgres-pr driver is used and force_standard_strings is false (jeremyevans)

* Drop support for ancient postgres driver in postgres adapter, now only pg and postgres-pr drivers are supported (jeremyevans)

* Deprecate Sequel::MySQL.convert_invalid_date_time accessor (jeremyevans)

* Deprecate Sequel::MySQL.convert_tinyint_to_bool accessor (jeremyevans)

* Deprecate Sequel::MySQL.default_{charset,collate,engine} accessors (jeremyevans)

* Add Database#default_{charset,collate,engine} accessors on MySQL (jeremyevans)

* Make mock adapter thread safe (jeremyevans)

* Deprecate Sequel::JDBC::Dataset#convert_types accessor (jeremyevans)

* Add Dataset#with_convert_types in jdbc adapter (jeremyevans)

* Deprecate Sequel::IBMDB::Dataset#convert_smallint_to_bool= method (jeremyevans)

* Deprecate Sequel::IBMDB.convert_smallint_to_bool accessor (jeremyevans)

* Add Database#convert_smallint_to_bool accessor in the ibmdb adapter (jeremyevans)

* Deprecate sequel_3_dataset_methods extension (jeremyevans)
